templates/tekton-dashboard-acl.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: acl
  namespace: tekton-pipelines
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 10.99.2.0/24
